- added missing css files

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-    <link rel="stylesheet" href="dist/bootstrap.css">
-    <link rel="stylesheet" href="dist/dn_bootstrap.css">
-    <link rel="stylesheet" href="dist/custom.css">
-    <link rel="stylesheet" href="dist/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="bootstrap.css">
+    <link rel="stylesheet" href="dn_bootstrap.css">
+    <link rel="stylesheet" href="custom.css">
 </head>
 <body>
 </body>
